@@ -102,6 +102,7 @@ Additions:
    * Add signals "spinner,drag,start" and "spinner,drag,stop" to the spinner widget.
    * Add support for "clicked" callback on Return/space/KP_Enter key press for image.
    * Add "virtualkeypad,size,changed" callback on virtualkeypad min size change for conformant.
+   * Add elm_slider_step_get(), elm_slider_step_set() for slider.
 
 Improvements:
 
