@@ -1731,3 +1731,7 @@
 2013-10-30  Daniel Juyung Seo (SeoZ)
 
         * conform: Added "virtualkeypad,size,changed" callback on virtualkeypad min size change.
+
+2013-10-30  Shilpa Onkar Singh
+
+        * slider: Added elm_slider_step_get(), elm_slider_step_set().
